[gd_scene load_steps=9 format=3 uid="uid://cp64rsm1umaj0"]

[ext_resource type="Script" path="res://components/scripts/rufus_gui.gd" id="1_3rxhd"]
[ext_resource type="Texture2D" uid="uid://bh58pmpvmwckg" path="res://components/sprites/GUI/player_GUI/Skill_GUI_bg.png" id="2_rdasp"]
[ext_resource type="Texture2D" uid="uid://cc25xbyrctd1l" path="res://components/sprites/GUI/player_GUI/rufus/Skill1_GUI_rufus.png" id="3_2maji"]
[ext_resource type="Texture2D" uid="uid://bciywb7l5cwth" path="res://components/sprites/GUI/player_GUI/rufus/Skill2_GUI_rufus.png" id="4_7cjmb"]
[ext_resource type="Texture2D" uid="uid://bflcuuauxyxfi" path="res://components/sprites/GUI/player_GUI/rufus/Eva_GUI_rufus.png" id="5_lwiw5"]
[ext_resource type="Texture2D" uid="uid://cega3rs3chnkn" path="res://components/sprites/GUI/player_GUI/rufus/Ulti_GUI_rufus.png" id="6_8rr55"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dcn56"]
bg_color = Color(0.219608, 0.219608, 0.219608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n23eg"]
bg_color = Color(1, 0, 0.0352941, 1)

[node name="Rufus_GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3rxhd")

[node name="GridContainer" type="GridContainer" parent="."]
clip_contents = true
layout_mode = 2
offset_left = -12.0
offset_top = 494.0
offset_right = 1920.0
offset_bottom = 1080.0
columns = 4

[node name="Control" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Skill1_cooldown" type="TextureProgressBar" parent="GridContainer/Control"]
layout_mode = 2
offset_left = 1468.0
offset_top = 299.0
offset_right = 1948.0
offset_bottom = 779.0
scale = Vector2(0.329, 0.329)
step = 0.001
allow_greater = true
fill_mode = 5
texture_under = ExtResource("3_2maji")
texture_progress = ExtResource("2_rdasp")

[node name="Control3" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Eva_cooldown" type="TextureProgressBar" parent="GridContainer/Control3"]
layout_mode = 2
offset_left = 1521.0
offset_top = 79.0
offset_right = 2001.0
offset_bottom = 559.0
scale = Vector2(0.329, 0.329)
step = 0.001
allow_greater = true
fill_mode = 5
texture_under = ExtResource("5_lwiw5")
texture_progress = ExtResource("2_rdasp")

[node name="Control2" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Skill2_cooldown" type="TextureProgressBar" parent="GridContainer/Control2"]
layout_mode = 2
offset_left = 1742.0
offset_top = 46.0
offset_right = 2222.0
offset_bottom = 526.0
scale = Vector2(0.329, 0.329)
step = 0.001
allow_greater = true
fill_mode = 5
texture_under = ExtResource("4_7cjmb")
texture_progress = ExtResource("2_rdasp")

[node name="Control4" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Ulti_cooldown" type="TextureProgressBar" parent="GridContainer/Control4"]
layout_mode = 2
offset_left = 1635.0
offset_top = 208.0
offset_right = 2115.0
offset_bottom = 688.0
scale = Vector2(0.465, 0.465)
step = 0.001
allow_greater = true
fill_mode = 5
texture_under = ExtResource("6_8rr55")
texture_progress = ExtResource("2_rdasp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 135
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Health_bar" type="ProgressBar" parent="MarginContainer/PanelContainer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -542.0
offset_bottom = 59.0
grow_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxFlat_dcn56")
theme_override_styles/fill = SubResource("StyleBoxFlat_n23eg")
step = 1.0
rounded = true
show_percentage = false

[node name="Health_label" type="Label" parent="MarginContainer/PanelContainer/Control/Health_bar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "444/444"
